--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,7 @@
   --background-end-rgb: 255, 255, 255;
 }
 
+
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
@@ -15,6 +16,24 @@
     --background-end-rgb: 0, 0, 0;
   }
 }
+/* styles.css */
+
+/* Add smooth scrolling behavior to the whole page */
+html {
+  scroll-behavior: smooth;
+}
+
+/* Customize the transition effect */
+html, body {
+  transition: 0.3s ease-in-out;
+}
+
+/* Style for the active section (optional) */
+section.active {
+  background-color: #f5f5f5; /* Change this to your desired background color */
+  /* Add any other styles you want for the active section */
+}
+
 
 body {
   color: rgb(var(--foreground-rgb));
@@ -24,4 +43,21 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+}
+.skills-chart {
+  max-width: 300px;
+}
+
+.bar {
+  margin-bottom: 10px;
+}
+
+.label {
+  font-weight: bold;
+  margin-bottom: 4px;
+}
+
+.progress {
+  height: 10px;
+  background-image: linear-gradient(to right, #FF4081, #9C27B0);
 }
